# order_flow

./: .gitignore  PLAN.md  README.md  cursor-prompt-wick-liquidity-refinement.md  notes.txt  orderflow_dashboard.html  phat-candle-research-plan.md  requirements.md  serve_dashboard.cmd  strategies.txt  todo.txt
api/: main.py  requirements.txt
data/: test.duckdb  (+1 more)
pipeline/: README.md  pyproject.toml
pipeline/data/: orderflow.duckdb
pipeline/src/orderflow_pipeline/: __init__.py  aggregate.py  backtest_defaults.py  backtest_engine.py  bias.py  calibrate.py  cli.py  db.py  decode.py  divergence.py  null_hypothesis.py  phat.py  regime.py  serialize.py  strategy_json.py  swings.py  symbology.py  velocity_regime.py
pipeline/src/orderflow_pipeline/strategies/: __init__.py  absorption_wall.py  breakout.py  config.py  exit_ticks.py  fade.py  legacy_fallback_logic.py  opening_range_breakout.py  regime_exit_scale.py  value_edge_reject.py
pipeline/tests/: test_5m_timeframe_e2e.py  test_aggregate.py  test_backtest_db_only.py  test_backtest_defaults.py  test_backtest_entry_gates.py  test_backtest_sl_tp.py  test_bias.py  test_execution_policy.py  test_legacy_fallback_strategy.py  test_null_hypothesis.py  test_opening_range_breakout.py  test_phat.py  test_recompute_divergences.py  test_regime.py  test_regime_exit_scale.py  test_strategy_json_config.py  test_strategy_json_validate.py  test_swings.py  test_velocity_metrics.py  validate_session.py
pipeline/tests/baseline/: pre_refactor_fires.json
pipeline/tests/fixtures/: session_anchor_aggregate_full_rth.golden.json
(+157 files in other folders)
